--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "deps/monodepth2"]
 	path = deps/monodepth2
-	url = git@github.com:nianticlabs/monodepth2.git
+	url = https://github.com/nianticlabs/monodepth2.git
+
